--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
  * build.gradle
  *
  * Copyright by toolarium-leader-election, all rights reserved.
- * MIT License: https://mit-license.org
  */
 apply from: "https://raw.githubusercontent.com/toolarium/common-gradle-build/master/gradle/common.gradle"
 
@@ -12,11 +11,11 @@ apply from: "https://raw.githubusercontent.com/toolarium/common-gradle-build/mas
  ****************************************************************************************/
 dependencies {
     // see https://docs.gradle.org/current/userguide/java_library_plugin.html
+    implementation 'org.jgroups:jgroups:5.1.9.Final'
 
-    // utilities
-    //implementation "net.sf.jptools:jptools:1.7.7"
-    //implementation "net.sf.jptools:jptools:1.7.7:slf4j-redirect"
-
+    implementation 'io.kubernetes:client-java:14.0.0'
+        implementation 'io.kubernetes:client-java-extended:14.0.0'
+        
     // logging
     implementation 'org.slf4j:slf4j-api:1.7.30'
     testRuntimeOnly 'ch.qos.logback:logback-classic:1.2.3'
