--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,9 @@ projectRootPackageName   = com.github.toolarium.leader.election
 projectGroupId           = com.github.toolarium
 projectComponentId       = toolarium
 projectDescription       = The implementation of the toolarium-leader-election.
-projectUrl               = 
+projectUrl               = https://github.com/toolarium/toolarium-leader-election
+licenseText              = Apache-2.0 License
+licenseUrl               = https://raw.githubusercontent.com/toolarium/toolarium-leader-election/master/LICENSE
 
 # tool information
 # checkstyleToolVersion    = 8.42
